--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,6 @@ jobs:
           # The following scopes are required:
           #  - public_access (default scope)
           #  - repo
-          #  - public_repo
-          #  - read:project
           # The following additional scopes may be required:
           #  - read:org      (for organization related metrics)
           #  - read:user     (for user related data)
@@ -31,9 +29,9 @@ jobs:
           user: Jesse-0x
           template: classic
           base: header, activity, community, repositories, metadata
+          base_indepth: yes
           config_display: columns
           config_octicon: yes
-          config_order: plugin.calendar
           config_timezone: America/Los_Angeles
           config_twemoji: yes
           plugin_achievements: yes
@@ -75,10 +73,6 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
-          plugin_lines: yes
-          plugin_lines_history_limit: 1
-          plugin_lines_repositories_limit: 4
-          plugin_lines_sections: base
           plugin_notable: yes
           plugin_notable_from: organization
           plugin_notable_types: commit
@@ -86,8 +80,6 @@ jobs:
           plugin_people_limit: 24
           plugin_people_size: 28
           plugin_people_types: followers, following
-          plugin_projects: yes
-          plugin_projects_limit: 4
           plugin_reactions: yes
           plugin_reactions_display: absolute
           plugin_reactions_limit: 200
@@ -95,26 +87,9 @@ jobs:
           plugin_reactions_limit_discussions_comments: 100
           plugin_reactions_limit_issues: 100
           plugin_repositories: yes
-          plugin_repositories_order: featured, pinned, starred, random
+          plugin_repositories_order: starred, random
           plugin_repositories_random: 1
           plugin_repositories_starred: 2
-          plugin_skyline: yes
-          plugin_skyline_frames: 60
-          plugin_skyline_quality: 0.5
-          plugin_skyline_settings: {
-            "url": "https://skyline.github.com/${login}/${year}",
-            "ready": "[...document.querySelectorAll('span')].map(span => span.innerText).includes('Share on Twitter')",
-            "wait": 1,
-            "hide": "button, footer, a"
-          }
-          plugin_skyline_year: current-year
-          plugin_stargazers: yes
-          plugin_stargazers_charts: yes
-          plugin_stargazers_charts_type: chartist
-          plugin_stargazers_worldmap: yes
-          plugin_stargazers_worldmap_sample: 0
-          plugin_stars: yes
-          plugin_stars_limit: 4
           plugin_topics: yes
           plugin_topics_limit: 15
           plugin_topics_mode: starred
@@ -122,4 +97,4 @@ jobs:
           plugin_traffic: yes
           plugin_tweets: yes
           plugin_tweets_limit: 2
-          plugin_tweets_user: Jesse-0x
+          plugin_tweets_user: Jesse_0x00
