--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,13 +25,14 @@ jobs:
           #  - repo          (optional, if you want to include private repositories)
           token: ${{ secrets.METRICS_TOKEN }}
 
+          
           # Options
           user: Jesse-0x
           template: classic
           base: header, activity, community, repositories, metadata
           base_indepth: yes
           config_display: columns
-          config_output: png
+          config_padding: 0, -20%
           config_octicon: yes
           config_timezone: America/Los_Angeles
           config_twemoji: yes
