--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
           base: header, activity, community, repositories, metadata
           base_indepth: yes
           config_display: regular
+          config_output: insights
           config_padding: 0, 100%
           config_octicon: yes
           config_timezone: America/Los_Angeles
